@@ -1,40 +1,9 @@
-# base image to build a JRE
-FROM openjdk:17 as corretto-jdk
-
-# required for strip-debug to work
-RUN sudo apt-get install binutils
-
-# Build small JRE image
-RUN $JAVA_HOME/bin/jlink \
-         --verbose \
-         --add-modules ALL-MODULE-PATH \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=2 \
-         --output /customjre
-
-# main app image
-FROM alpine:latest
-ENV JAVA_HOME=/jre
-ENV PATH="${JAVA_HOME}/bin:${PATH}"
-
-# copy JRE from the base image
-COPY --from=corretto-jdk /customjre $JAVA_HOME
-
-# Add app user
-ARG APPLICATION_USER=appuser
-RUN adduser --no-create-home -u 1000 -D $APPLICATION_USER
-
-# Configure working directory
-RUN mkdir /app && \
-    chown -R $APPLICATION_USER /app
-
-USER 1000
-
-ARG JAR_FILE=target/spring-3.0.0.jar
-COPY --chown=1000:1000 ${JAR_FILE} /app/app.jar
-WORKDIR /app
+FROM openjdk:17
 
 EXPOSE 8080
-ENTRYPOINT [ "/jre/bin/java", "-jar", "/app/app.jar" ]
+
+WORKDIR /app
+
+COPY target/spring-3.0.0.jar /app/app.jar
+
+ENTRYPOINT ["java","-jar", "app.jar"]
